# AI-CI-CD-Self-Healing-Pipeline

./: .gitignore  README.md  docker-compose.yml  readme.md
.github/workflows/: ci.yml  fail-missing-dependency.yml  fail-version-conflict.yml  self-healing-pipeline.yml
demo-app/: Dockerfile  Dockerfile.txt  README.md  app.py  requirements.txt
demo-app/tests/: test_api.py  test_app.py  test_integration.py
docs/: cicd_healing_project.txt  markdown.md
kubernetes/: grafana-deployment.yaml  ingress.yaml  namespace.yaml  pipeline-monitor-deployment.yaml  postgres-deployment.yaml  redis-deployment.yaml
ml-models/: failure_patterns.py  train_predictor.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: pipeline-dashboard.json  pipeline-monitor-dashboard-1771442568409.json
monitoring/grafana/datasources/: prometheus.yml
nginx/: nginx.conf
pipeline-monitor/: Dockerfile  Dockerfile.txt  config.yaml  pyproject.toml  requirements.txt
pipeline-monitor/app/: __init__.py  github_monitor.py  healing_engine.py  main.py  metrics.py  ml_predictor.py  models.py  monitor_safe.py
pipeline-monitor/ml-models/: README.md  requirements.txt
pipeline-monitor/ml-models/models/: training_report.txt
pipeline-monitor/models/: failure_predictor.pkl  healing_predictor.pkl  metadata.pkl  scaler.pkl
scripts/: deploy.sh  init_db.sql  setup.sh  test_healing.sh
